<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarr"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:paddingLeft="0dp"
        android:popupTheme="@style/MyMaterialThemezzz"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <FrameLayout
        android:layout_below="@+id/toolbarr"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:clipToPadding="false"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advrecycler"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_advrecyler"
                    android:linksClickable="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iconics"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_iconics"
                    android:linksClickable="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jsoup"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_jsoup"
                    android:linksClickable="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/leak"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_leak"
                    android:linksClickable="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mdialogs"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_matdialog"
                    android:linksClickable="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pug"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_pug"
                    android:linksClickable="true"/>

            </LinearLayout>
        </ScrollView>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/toolbarr"
            android:background="@drawable/shadow" />
    </FrameLayout>




</RelativeLayout>